tests/semantic_errors/func_redef.c
// Semantic error test: Function redefinition

int foo() {
    return 1;
}

int foo() {
    return 2;
}

int test() {
    return foo();
}